# mmf_writer_ros

./: CMakeLists.txt  DEADJOE  README.md  README.org  nodelet_plugins.xml  package.xml
action/: Record.action
cfg/: ProcessImage.cfg
include/mmf_writer/: BackgroundRemovedImage.h  BlankMetaData.h  ImageMetaDataLoader.h  NameValueMetaData.h  Queue.h  RecordingActionServer.h  StackReader.h  StaticBackgroundCompressor.h  ThreadedLinearStackCompressor.h  ThreadedStaticBackgroundCompressor.h  advertisement_checker.h  mmfWriter.h
launch/: mmf_writer.launch
msg/: RecorderSettings.msg  RecordingStatus.msg
src/libmmf_writer/: BackgroundRemovedImage.cpp  BackgroundRemovedImageLoader.cpp  CompositeImageMetaData.cpp  ExtraDataWriter.cpp  ImageMetaDataLoader.cpp  IplImageLoaderFixedWidth.cpp  LinearStackCompressor.cpp  NameValueMetaData.cpp  RecordingActionServer.cpp  StackReader.cpp  StaticBackgroundCompressor.cpp  StaticBackgroundCompressorLoader.cpp  ThreadedLinearStackCompressor.cpp  ThreadedStaticBackgroundCompressor.cpp  Timer.cpp  advertisement_checker.cpp
src/nodelets/: mmfWriter.cpp  mmfWriter_nodelet.cpp  mmfWriter_nodelet.h  process_image.cpp
src/nodes/: mmf_writer-pre-nodelet.cpp  mmf_writer.cpp  mmf_writer_ai.cpp  mmf_writer_original.cpp  my_publisher.cpp
test/: CMakeLists.txt  rostest.cpp  test_bayer.xml
